--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <title>Understanding TypeScript</title>
     <script src="./dist/app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <p id="user-input"></p>
+  </body>
 </html>
